--- a/app/src/main/res/layout/learn_item.xml
+++ b/app/src/main/res/layout/learn_item.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent">
 
     <ImageView
+        android:contentDescription="@string/app_name"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:src="@mipmap/ic_launcher"/>
